# SimpleCraft

./: .gitignore  .gitmodules  CMakeLists.txt  EntryPoint.cpp
Game/: SimpleCraft.cpp  SimpleCraft.h
